--- a/vuf-lib/Cargo.toml
+++ b/vuf-lib/Cargo.toml
@@ -3,6 +3,12 @@ name = "vuf-lib"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name="vuf"
+crate-type=["cdylib","staticlib","rlib"]
 
 [dependencies]
+libc = "0.2"
+
+
+
